fix: adjust alignment of quote icon

--- a/packages/design-system/src/components/EditorialContent/ArticleToolkit/PullQuote/web/PullQuote.module.scss
+++ b/packages/design-system/src/components/EditorialContent/ArticleToolkit/PullQuote/web/PullQuote.module.scss
@@ -18,7 +18,7 @@
   .quote-icon-wrapper {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     flex-shrink: 0;
     padding: 0;
 
